# Syringe

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE-HEADERS  README.md  vcpkg.json
debugger/: CMakeLists.txt  debugger.breakpoint.cpp  debugger.cpp  debugger.handlers.cpp  debugger.hpp  debugger.loop.cpp  dll_info.hpp  process_memory.hpp  thread.hpp  thread_manager.hpp  typedefs.hpp  virtual_memory_handle.hpp
include/: Syringe.h  context.hpp  declaration.hpp  elements.hpp
injector/: CMakeLists.txt  asm.hpp  configurator.hpp  context_emplacer.cpp  context_emplacer.hpp  framework.hpp  get_function_code.hpp  hook.cpp  hook.hpp  hook_injector.cpp  hook_injector.hpp  hook_retriever.cpp  hook_retriever.hpp  load_library_code.hpp  misc_code.hpp  module.cpp  module.hpp  module_retriever.cpp  module_retriever.hpp  typedefs.hpp  waiter.hpp
syringe/: CMakeLists.txt  main.cpp
